<resources>
    <string name="app_name">My Application</string>
    <string name="checkbox4">CheckBox4</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="check_box_5">Check box 5</string>
    <string name="check_box_6">Check Box 6</string>
    <string name="this_is_my_layout_project">This is my layout project</string>
    <string name="smiley_image">smiley_image</string>
</resources>